# Tanque-de-guerra-3d

./: CMakeLists.txt  README.MD  main.cpp
docs/: Screencast from 09-03-2024 12:22:00 AM.webm
include/: Helpers.hpp  Scene.hpp  Shader.hpp  Tank.hpp  Track.hpp  Turret.hpp
libs/: glad.c
shader/: fragment_shader.glsl  vertex_depth_map.glsl  vertex_shader.glsl
src/: Helpers.cpp  Scene.cpp  Shader.cpp  Tank.cpp  Track.cpp  Turret.cpp
